Add `clean` target to Makefile

--- a/cxx/Makefile
+++ b/cxx/Makefile
@@ -1,4 +1,7 @@
 CXXFLAGS+=-O3 -Wall -std=c++11  -fopenmp -march=native
 ALL: knight_tours
-.PHONY: ALL
+
+clean:
+	rm -f *.o *~ knight_tours
+.PHONY: ALL clean
 
