--- a/haskell/KnightTours.cabal
+++ b/haskell/KnightTours.cabal
@@ -17,6 +17,7 @@ cabal-version:       >=1.10
 
 executable KnightTours
   main-is:             KnightTours.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9, parallel >=3.2 && <3.3, vector >=0.10 && <0.11
