--- a/haskell/KnightTours.cabal
+++ b/haskell/KnightTours.cabal
@@ -20,6 +20,8 @@ executable KnightTours
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fllvm
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9, parallel >=3.2 && <3.3, vector >=0.10 && <0.11
+  build-depends:       base >=4.8
+                       , parallel >=3.2
+                       , vector >=0.10
   -- hs-source-dirs:      
   default-language:    Haskell2010
